# lwGPT

./: .gitignore  README.md  package-lock.json  package.json  replace.txt
backend/: RENDER_DEPLOYMENT.md  package-lock.json  package.json  paymentGate.js  render.yaml
backend/api/: auth.js  chat.js  payment.js
backend/auth/: authRoutes.js  ensureDemoUser.js
backend/config/: limits.js
backend/controllers/: chatController.js
backend/lib/: prisma.js  redis.js
backend/middleware/: authMiddleware.js  requireRole.js  usageLimit.js
backend/prisma/: schema.prisma
backend/routes/: chat.routes.js
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: auth.js  sendChatToBackend.js
frontend/src/assets/: index.js
frontend/src/components/: BenefitHeading.jsx  Benefits.jsx  Button.jsx  CompanyLogos.jsx  FAQ.jsx  FeatureCard.jsx  FinalCTA.jsx  Footer.jsx  ForWhom.jsx  Header.jsx  Hero.jsx  HeroCTA.jsx  HowToUse.jsx  Notification.jsx  Pricing.jsx  SecurityTrust.jsx  Stats.jsx  TechStack.jsx  WhyBetter.jsx
frontend/src/constants/: index.js
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: ChatPage.jsx  LandingPage.jsx  LoginPage.jsx  PaymentCancelPage.jsx  PaymentSuccessPage.jsx  RegisterPage.jsx
frontend/src/routes/: ProtectedRoute.jsx  PublicRoute.jsx
src/: App.jsx  main.jsx
src/api/: sendChatToBackend.js
src/components/: ForWhom.jsx  Header.jsx  Hero.jsx  HowToUse.jsx  Pricing.jsx  Section.jsx  TechStack.jsx
src/pages/: LandingPage.jsx
tempBackend/: main.py  pyproject.toml
tempBackend/src/: modelTemp.py
(+5 files in other folders)
